closDevOrg/force-app/main/default/objects/LOS_SLA_Rule__mdt/fields/LOS_Business_Hours_Key__c.field-meta.xml
<CustomField>
    <fullName>LOS_Business_Hours_Key__c</fullName>
    <description>Business Hours Key. See docs/data-dictionary.md for usage.</description>
    <label>Business Hours Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>