closDevOrg/force-app/main/default/objects/LOS_SLA_Rule__mdt/fields/LOS_Description__c.field-meta.xml
<CustomField>
    <fullName>LOS_Description__c</fullName>
    <description>Description. See docs/data-dictionary.md for usage.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>