closDevOrg/force-app/main/default/objects/LOS_SLA_Rule__mdt/fields/LOS_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>LOS_Effective_From__c</fullName>
    <description>Effective From. See docs/data-dictionary.md for usage.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>