closDevOrg/force-app/main/default/objects/LOS_SLA_Rule__mdt/fields/LOS_Effective_To__c.field-meta.xml
<CustomField>
    <fullName>LOS_Effective_To__c</fullName>
    <description>Effective To. See docs/data-dictionary.md for usage.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>