closDevOrg/force-app/main/default/objects/LOS_SLA_Rule__mdt/fields/LOS_Org_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>LOS_Org_Unit_Type__c</fullName>
    <description>Org Unit Type. See docs/data-dictionary.md for usage.</description>
    <label>Org Unit Type</label>
    <referenceTo>LOS_Org_Unit_Type__mdt</referenceTo>
    <relationshipLabel>LOS SLA Rule Org Unit Type</relationshipLabel>
    <relationshipName>LOS_SLA_Rule_Org_Unit_Type</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>