closDevOrg/force-app/main/default/objects/LOS_SLA_Rule__mdt/fields/LOS_Warning_Minutes__c.field-meta.xml
<CustomField>
    <fullName>LOS_Warning_Minutes__c</fullName>
    <description>Warning Minutes. See docs/data-dictionary.md for usage.</description>
    <label>Warning Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>